# protobuf

./: CMakeLists.txt  README.md  README_EN.md  kunpeng_opti_v28.3.patch  kunpeng_opti_v33.0.patch
.github/workflows/: clear_caches.yml  scorecard.yml  staleness_check.yml  staleness_refresh.yml  test_cpp.yml  test_csharp.yml  test_java.yml  test_objectivec.yml  test_php.yml  test_php_ext.yml  test_python.yml  test_ruby.yml  test_rust.yml  test_upb.yml  update_php_repo.yml
build_defs/: cpp_opts.bzl
docs/en/: api_reference.md  installation_guide.md  quick_start.md  release_notes.md
docs/zh/: api_reference.md  installation_guide.md  menu_protobuf.md  quick_start.md  release_notes.md
java/core/src/main/java/com/google/protobuf/: Utf8.java
protobuf-opt-benchmarks/: CMakeLists.txt  arr_data32.proto  arr_data64.proto  benchmark.cpp  benchmark_for_arr_data.cpp  check-pb-home.sh  clean.sh  compile-and-run.sh  compile.sh  config.sh  pae_data.proto  run.sh  test.proto
src/google/protobuf/: arena.h  arenastring.cc  arenastring_unittest.cc  generated_message_tctable_impl.h  generated_message_tctable_lite.cc  generated_message_tctable_lite_test.cc  lite_unittest.cc  map.h  message_lite.cc  parse_context.cc  parse_context.h  repeated_field.h  string_block.h  string_block_test.cc  wire_format_lite.cc
src/google/protobuf/io/: coded_stream.h
src/google/protobuf/json/internal/: untyped_message.cc
